[project]
name = "summer-school"
version = "0.1.0"
description = "Env for the tutorials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.33.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy<2",
    "open-clip-torch>=2.32.0",
    "openai>=1.88.0",
    "openslide-python>=1.4.2",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "torch==2.2.2",
    "transformers>=4.52.4",
]
